Add dropbox to samba

--- a/filesharing/smb.conf
+++ b/filesharing/smb.conf
@@ -51,3 +51,10 @@ guest account = nobody
         browseable = yes
         read only = yes
         guest ok = yes
+
+[dropbox]
+        comment = Dropbox
+        path = /etc/dropbox/Dropbox
+        browseable = yes
+        read only = yes
+        guest ok = yes
